--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.20.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.4",
     "@mui/material-nextjs": "^5.15.3",
     "@mui/types": "^7.2.13",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.8.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18"
